--- a/Monografia/bibliografia.bib
+++ b/Monografia/bibliografia.bib
@@ -29,7 +29,14 @@
 % =======================
 % Article
 % =======================
-
+@article{chagas2018estudo,
+	title={Um estudo sobre os sistemas de gerenciamento de conte{\'u}do de c{\'o}digo aberto},
+	author={Chagas, Fernando and de Carvalho, Cedric Luiz and da Silva, Jo{\~a}o Carlos},
+	journal={Revista Telfract},
+	volume={1},
+	number={1},
+	year={2018}
+}
 
 
 % =======================
